--- a/index.html
+++ b/index.html
@@ -1,53 +1,61 @@
+
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="manifest" href="manifest.json">
   <title>Room Wangi by Faxz</title>
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background: black;
+      color: white;
+    }
+    .watermark {
+      background: red;
+      color: black;
+      padding: 5px;
+      font-weight: bold;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      animation: marquee 10s linear infinite;
+    }
+    @keyframes marquee {
+      0%   { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
 </head>
 <body>
-  <video autoplay muted loop id="bgVideo">
-    <source src="background-video.mp4" type="video/mp4" />
-  </video>
-
-  <div class="watermark">Aplikasi ini dibuat oleh AlwaysFaxz Tidak Boleh Ada Yg Memperjual Belikan • Credits : Youtube @alwaysfaxz</div>
-
-  <div class="login-container" id="loginBox">
-    <h2>Input Your Username & Password</h2>
-    <input type="text" placeholder="Username" id="username" />
-    <input type="password" placeholder="Password" id="password" />
-    <button onclick="checkLogin()">Login</button>
-    <div id="loginError" class="error"></div>
-    <div id="helpLinks" style="display: none;">
-      <a class="btn whatsapp" href="https://wa.me/62895370384561?text=AlwaysFaxz" target="_blank">Hubungi AlwaysFaxz</a>
-      <a class="btn info" href="https://whatsapp.com/channel/0029VbAeNgV3gvWZi8znXQ0L" target="_blank">Information By AlwaysFaxz</a>
-    </div>
+  <div class="watermark">
+    Aplikasi ini dibuat oleh AlwaysFaxz Tidak Boleh Ada Yg Memperjual Belikan • Credits : Youtube @alwaysfaxz
   </div>
-
-  <div class="main-ui" id="mainUI" style="display: none;">
-    <div class="loading-bar-container" id="loadingScreen">
-      <div class="loading-bar"></div>
-      <p>Aplikasi Di Buat Oleh AlwaysFaxz</p>
-    </div>
-
-    <div class="pull-tab" onclick="toggleServerList()">
-      <img src="tab.png" alt="Tab" />
-    </div>
-
-    <div id="serverList" class="server-list">
-      <button onclick="connect('hongkong')">Hongkong</button>
-      <button onclick="connect('vietnam')">Vietnam</button>
-      <button onclick="connect('thailand')">Thailand</button>
-      <button onclick="connect('laos')">Laos</button>
-      <button onclick="connect('kamboja')">Kamboja</button>
-    </div>
-
-    <div id="connectionStatus">Belum Terhubung</div>
-    <button id="mlbbBtn" style="display: none;" onclick="loginMLBB()">Login MLBB</button>
-  </div>
-
-  <script src="script.js"></script>
+  <h1 style="text-align:center; margin-top:100px;">Login Form</h1>
+  <form id="loginForm" style="text-align:center;">
+    <input type="text" id="username" placeholder="Username" /><br /><br />
+    <input type="password" id="password" placeholder="Password" /><br /><br />
+    <button type="submit">Login</button>
+  </form>
+  <script>
+    const loginForm = document.getElementById("loginForm");
+    loginForm.addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+      const res = await fetch("https://raw.githubusercontent.com/X-Faxz/X-RW.AlwaysFaxz/main/key.json");
+      const data = await res.json();
+      const user = data.users.find(u => u.username === username && u.password === password);
+      if (user) {
+        alert("Login berhasil!");
+      } else {
+        alert("Username atau Password salah.");
+      }
+    });
+  </script>
 </body>
 </html>
