--- a/index.html
+++ b/index.html
@@ -1,61 +1,41 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="manifest.json">
   <title>Room Wangi by Faxz</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: black;
-      color: white;
-    }
-    .watermark {
-      background: red;
-      color: black;
-      padding: 5px;
-      font-weight: bold;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      overflow: hidden;
-      white-space: nowrap;
-      animation: marquee 10s linear infinite;
-    }
-    @keyframes marquee {
-      0%   { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-  </style>
+  <link rel="icon" href="assets/tab.png" type="image/png" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="watermark">
-    Aplikasi ini dibuat oleh AlwaysFaxz Tidak Boleh Ada Yg Memperjual Belikan • Credits : Youtube @alwaysfaxz
+  <div id="loading">
+    <div class="bar"></div>
+    <p>Aplikasi Di Buat Oleh AlwaysFaxz</p>
   </div>
-  <h1 style="text-align:center; margin-top:100px;">Login Form</h1>
-  <form id="loginForm" style="text-align:center;">
-    <input type="text" id="username" placeholder="Username" /><br /><br />
-    <input type="password" id="password" placeholder="Password" /><br /><br />
-    <button type="submit">Login</button>
-  </form>
-  <script>
-    const loginForm = document.getElementById("loginForm");
-    loginForm.addEventListener("submit", async function(e) {
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      const res = await fetch("https://raw.githubusercontent.com/X-Faxz/X-RW.AlwaysFaxz/main/key.json");
-      const data = await res.json();
-      const user = data.users.find(u => u.username === username && u.password === password);
-      if (user) {
-        alert("Login berhasil!");
-      } else {
-        alert("Username atau Password salah.");
-      }
-    });
-  </script>
+
+  <div id="login-container" style="display:none;">
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
+    <p id="login-error" style="color:red;"></p>
+  </div>
+
+  <div id="app" style="display:none;">
+    <video autoplay muted loop id="bg-video">
+      <source src="assets/bg.mp4" type="video/mp4" />
+    </video>
+    <div class="watermark">Room Wangi By Faxz</div>
+    <div class="server-list">
+      <button onclick="connect('Hongkong')">Hongkong</button>
+      <button onclick="connect('Vietnam')">Vietnam</button>
+      <button onclick="connect('Thailand')">Thailand</button>
+      <button onclick="connect('Kamboja')">Kamboja</button>
+      <button onclick="connect('Laos')">Laos</button>
+    </div>
+    <button id="mlbb-btn" style="display:none;" onclick="loginMLBB()">Login MLBB</button>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
